--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
-== README
+Project: Blogger App
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Focus:
 
-Things you may want to cover:
+-Models, Views, and Controllers (MVC)
 
-* Ruby version
+-Routing
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+-Views with forms, partials, and helpers
